--- a/app/assets/stylesheets/elements.scss
+++ b/app/assets/stylesheets/elements.scss
@@ -195,11 +195,12 @@ h1
   @include rem-fallback(font-size, 2); //32
   @include rem-fallback(line-height, 3);
   @include rem-fallback(margin, 0, 0, 1.5);
-  @include respond-to(handheld) { @include rem-fallback(font-size, 1.375); @include rem-fallback(line-height, 1.5); }
+  @include respond-to(handheld) { @include rem-fallback(font-size, 1.375); @include rem-fallback(line-height, 1.5); @include rem-fallback(margin, 1.5, 0, 1.5); }
   
   &:first-child 
   {
     @include rem-fallback(margin, 0, 0, 1.5);
+    @include respond-to(handheld) { @include rem-fallback(margin, 1.5, 0, 1.5); }
   }
   span 
   {
