--- a/app/assets/stylesheets/index_posts.scss
+++ b/app/assets/stylesheets/index_posts.scss
@@ -1,7 +1,7 @@
 .blog {
   article 
   {
-    @include rem-fallback(min-height, 9);
+    @include rem-fallback(min-height, 10.5);
     @include rem-fallback(padding, 0, 0, 0.5, 0);
     position: relative;
     @include respond-to(handheld) { @include rem-fallback(min-height, 6); }
@@ -20,17 +20,17 @@
       @include rem-fallback(font-size, 1.5);
       margin: 0;
       @include rem-fallback(margin, 0.75, 0);
-      @include rem-fallback(margin, 1, 0, 0.5, 0);
+      @include rem-fallback(margin, 0.75, 0, 0.75, 0);
       @include rem-fallback(line-height, 1.5);
-      @include respond-to(tablet) { padding-left: 120px; }
-      @include respond-to(handheld) { padding-left: 90px; margin: 0; @include rem-fallback(font-size, 1.1);}
+      @include respond-to(tablet) { padding-left: 125px; }
+      @include respond-to(handheld) { padding-left: 95px; margin: 0; @include rem-fallback(font-size, 1.1);}
     }
 
     div.meta, p, time
     {
       padding-left: 150px;
-      @include respond-to(tablet) { padding-left: 120px; }
-      @include respond-to(handheld) { padding-left: 90px; }
+      @include respond-to(tablet) { padding-left: 125px; }
+      @include respond-to(handheld) { padding-left: 95px; }
     }
 
     p 
@@ -42,10 +42,10 @@
     {
       position: absolute;
       left: 0;
-      top: 0;
+      @include rem-fallback(top, 0.4);
       @include rounded;
-      @include respond-to(tablet) { width: 110px; height: 110px; top: #{$gutter / 2}px; }
-      @include respond-to(handheld) { width: 80px; height: 80px; top: #{$gutter}px; }
+      @include respond-to(tablet) { width: 110px; height: 110px; }
+      @include respond-to(handheld) { width: 80px; height: 80px; }
     }
   }
 }
